fixes container padding being too wide

--- a/docs/theme/static/styles/_shared_layout.less
+++ b/docs/theme/static/styles/_shared_layout.less
@@ -50,8 +50,8 @@ body:not(.donejs) {
 			@media(max-width: @screen-md-max) {
 				margin-right: auto;
 				width: 100%;
-				padding-left: 40px;
-				padding-right: 40px;
+				padding-left: 20px;
+				padding-right: 20px;
 				margin:50px 0;
 			}
 		}
@@ -232,7 +232,7 @@ body:not(.donejs) {
 				line-height:1;
 				font-size: 35px;
 				height: auto;
-				padding: 60px 40px;
+				padding: 60px 20px;
 			}
 			&:before {
 				content: "";
